--- a/contactos.html
+++ b/contactos.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Proyecto</title>
+    <title>Contactos</title>
 </head>
 <body>
-    <p>Hola Mundo</p>
-    <a href="contactos.html">contactos</a>
+    <p>Javier Murillo Burgos</p>
 </body>
 </html>
